<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarContactoActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:text="@string/str_gestion_contacto"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#093D67" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_nombre"  />

    <EditText
        android:id="@+id/ges_txt_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_digite_nombre"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_telefono"  />

    <EditText
        android:id="@+id/ges_txt_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_digite_telefono"
        android:inputType="text|phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_correo"  />

    <EditText
        android:id="@+id/ges_txt_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_digite_correo"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_direccion"  />

    <EditText
        android:id="@+id/ges_txt_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_digite_direccion"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal" >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ges_btn_guardar"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_btn_guardar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ges_btn_actualizar"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_btn_actualizar" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ges_btn_eliminar"
            android:layout_gravity="center_horizontal"
            android:text="@string/str_btn_eliminar" />
    </LinearLayout>


</LinearLayout>